--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <header>
+    <h1>A heading here</h1>
+        </header>
         <title>Stats Visualization</title>
     </head>
     <body>
